5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1785_3140.log
== SUBMITION (2019-05-30 10:47:28) 
-- CODE:
from numpy import*
vet = array(eval(input("vetores:")))
n = [:-1]
m = ((vet[0]**5+vet[1]**5+vet[2]**5+vet[size(n)-1])/sum[n])**0.2
print(round(m, 2))
-- EXECUTION TIME:
0.158259
-- ERROR:
  File "/home/codebench/codes/1785/3140/main.py", line 3
    n = [:-1]
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:47:33) 
-- CODE:
from numpy import*
vet = array(eval(input("vetores:")))
n = [:-1]
m = ((vet[0]**5+vet[1]**5+vet[2]**5+vet[size(n)-1])/sum[n])**0.2
print(round(m, 2))
-- EXECUTION TIME:
0.1744
-- ERROR:
  File "/home/codebench/codes/1785/3140/main.py", line 3
    n = [:-1]
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:47:33) 
-- CODE:
from numpy import*
vet = array(eval(input("vetores:")))
n = [:-1]
m = ((vet[0]**5+vet[1]**5+vet[2]**5+vet[size(n)-1])/sum[n])**0.2
print(round(m, 2))
-- EXECUTION TIME:
0.195769
-- ERROR:
  File "/home/codebench/codes/1785/3140/main.py", line 3
    n = [:-1]
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:47:33) 
-- CODE:
from numpy import*
vet = array(eval(input("vetores:")))
n = [:-1]
m = ((vet[0]**5+vet[1]**5+vet[2]**5+vet[size(n)-1])/sum[n])**0.2
print(round(m, 2))
-- EXECUTION TIME:
0.10813
-- ERROR:
  File "/home/codebench/codes/1785/3140/main.py", line 3
    n = [:-1]
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:47:34) 
-- CODE:
from numpy import*
vet = array(eval(input("vetores:")))
n = [:-1]
m = ((vet[0]**5+vet[1]**5+vet[2]**5+vet[size(n)-1])/sum[n])**0.2
print(round(m, 2))
-- EXECUTION TIME:
0.193669
-- ERROR:
  File "/home/codebench/codes/1785/3140/main.py", line 3
    n = [:-1]
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:48:34) 
-- CODE:
from numpy import*
vet = array(eval(input("vetores:")))
n = [:-1]
m = ((vet[0]**5+vet[1]**5+vet[2]**5+vet[size(n)-1])/sum[n])**1/5
print(round(m 2))
-- EXECUTION TIME:
0.169281
-- ERROR:
  File "/home/codebench/codes/1785/3140/main.py", line 3
    n = [:-1]
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:48:36) 
-- CODE:
from numpy import*
vet = array(eval(input("vetores:")))
n = [:-1]
m = ((vet[0]**5+vet[1]**5+vet[2]**5+vet[size(n)-1])/sum[n])**1/5
print(round(m 2))
-- EXECUTION TIME:
0.134698
-- ERROR:
  File "/home/codebench/codes/1785/3140/main.py", line 3
    n = [:-1]
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:48:36) 
-- CODE:
from numpy import*
vet = array(eval(input("vetores:")))
n = [:-1]
m = ((vet[0]**5+vet[1]**5+vet[2]**5+vet[size(n)-1])/sum[n])**1/5
print(round(m 2))
-- EXECUTION TIME:
0.138946
-- ERROR:
  File "/home/codebench/codes/1785/3140/main.py", line 3
    n = [:-1]
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:48:36) 
-- CODE:
from numpy import*
vet = array(eval(input("vetores:")))
n = [:-1]
m = ((vet[0]**5+vet[1]**5+vet[2]**5+vet[size(n)-1])/sum[n])**1/5
print(round(m 2))
-- EXECUTION TIME:
0.159282
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1785/3140/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:48:36) 
-- CODE:
from numpy import*
vet = array(eval(input("vetores:")))
n = [:-1]
m = ((vet[0]**5+vet[1]**5+vet[2]**5+vet[size(n)-1])/sum[n])**1/5
print(round(m 2))
-- EXECUTION TIME:
0.235093
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1785/3140/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
